--- a/personalWebsite/css_style.css
+++ b/personalWebsite/css_style.css
@@ -1,36 +1,36 @@
 h1{
-	font-size: 70px;
+	font-size: 400%;
+	color: #F3F4EC;
 }
 h2{
 	font-size: 32px;
+	display: inline-block;
+	margin: 0%;
+	color: #F3F4EC;
 }
 p{
 	line-height: 150%;
+	color: #F3F4EC;
 }
 ul{
 	list-style-type: circle;
 	text-align: left;
+	color: #F3F4EC;
 }
 body, header, main{
 	font-family: "Times New Roman", Times, serif;
 }
-
-body{
-	background-color: Skyblue;
-}
-
 header{
-	background-color: Slateblue;
 	text-align: center;
 }
 
 main{
-	background-color: Slateblue;
+	margin: 5%;
+	border-radius: 10%;
 	text-align: center;
 }
 
 section{
-	background-color: snow;
 	border-style: double;
 	border-radius: 25px;
 	width: 30%;
@@ -40,12 +40,33 @@ section{
 }
 
 footer{
-	color: Slateblue;
 }
 #Nametag{
-	background: blue;
-	border-radius: 15%;
+	border-radius: 50%;
+	display: flex;
+	margin: 3%;
+
 }
 #Pagetabs{
-	background-color: yellow;
+	display: inline-flex;
 }
+#currentpage{
+	background-color: #CCCFBC;
+}
+
+
+body{
+	background-color: #507642;
+}
+header, main, footer{
+	background-color: #86942A;
+}
+#Nametag, #Pagetabs, section{
+	background-color: #A37B45;
+}
+/* #507642
+ #86942A
+ #A37B45
+ #CCCFBC
+ #F3F4EC
+ */
