--- a/personalWebsite/css_style.css
+++ b/personalWebsite/css_style.css
@@ -1,9 +1,7 @@
-body{
-	align-items: center;
-}
 h1,h2,h3,p,ul,a{
 	color: #594157;
 	text-decoration: none;
+	font-style: times;
 }
 h1{
 	font-size: 400%;
@@ -20,14 +18,11 @@ ul{
 	list-style-type: circle;
 	text-align: left;
 }
+
+
 body{
-	background-color: #529329;
-}
-header, main{
-	background-color: #05668D;
-}
-body, header, main{
-	font-family: "Times New Roman", Times, serif;
+	background:linear-gradient(to bottom right, #529329 0%,#594157);
+	text-align: center;
 }
 header{
 	align-self: center;
@@ -35,13 +30,22 @@ header{
 	border-radius: 5%;
 	width: auto;
 }
-
 main{
 	margin: 5%;
 	border-radius: 10%;
 	text-align: center;
 }
+footer{
+	text-align: center;
+	width:auto;
+}
 
+header, main{
+	background-color: #05668D;
+}
+body, header, main{
+	font-family: "Times New Roman", Times, serif;
+}
 section,footer{
 	border-style: double;
 	border-radius: 25px;
@@ -51,42 +55,29 @@ section,footer{
 	vertical-align: middle;
 }
 
-footer{
-	text-align: center;
-	width:auto;
-}
 #Nametag{
-	border-radius: 50%;
-	padding: 1%;
-	width: 60%;
-	margin-bottom: 3%;
-	display: inline-flex;
-}
-#Pagetabs{
-	display: inline-flex;
+	height: 300px;
+	margin: 0%;
 }
 #currentpage{
 	background-color: #26C485;
 }
+#Pagetabs{
+	display: block;
+	margin: 1%;
+}
 
-#Nametag, #Pagetabs, section, footer{
+#Aboutmain{
+	width: 90%;
+}
+#Pagetabs, section, footer{
 	background-color: #A3E7FC;
 }
-/* #507642
- #86942A
- #A37B45
- #CCCFBC
- #F3F4EC
-
- #86942A
+/*
+color scheme
+ #529329
  #05668D
- #427AA1
- EBF2FA
- 382633
-
- 529329
- 05668D
- A3E7FC
- 26C485
- 594157
+ #A3E7FC
+ #26C485
+ #594157
  */
